@@ -1,6 +1,6 @@
 Package: robustbase
-Version: 0.7-6
-Date: 2011-05-23
+Version: 0.7-7
+Date: 2011-10-11
 Title: Basic Robust Statistics
 Author: Original code by many authors, notably
 	Peter Rousseeuw and Christophe Croux, see file 'Copyrights';
@@ -20,7 +20,7 @@ Description: "Essential" Robust Statistics.  The goal is to provide
  regression methodology including model selections and multivariate
  statistics where we strive to cover the book "Robust Statistics,
  Theory and Methods" by Maronna, Martin and Yohai; Wiley 2006.
-Depends: R (>= 2.9.0), stats, graphics, methods
+Depends: R (>= 2.10.0), stats, graphics, methods
 Suggests: MASS, lattice, boot, MPV, xtable, ggplot2, RColorBrewer
 LazyLoad: yes
 LazyData: yes
