@@ -1,3 +1,8 @@
+2011-10-11  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/nlrob.R, man/nlrob.Rd: finally fix "fitted.values"
+	* tests/nlrob-tst.R (new): start more testing of nlrob()!
+
 2011-08-09  Manuel Koller  <koller@stat.math.ethz.ch>
 
 	* R/plot.lmrob.R (plot.lmrob): Fixing bug reported by Andreas
@@ -9,7 +14,7 @@
 
 2011-05-24  Manuel Koller  <koller@stat.math.ethz.ch>
 
-	* DESCRIPTION (Version): 0.7-6
+	* DESCRIPTION (Version): 0.7-6, released to CRAN today
 
 	* inst/doc/lmrob_simulation.Rnw: cleaned up chunk headers.
 
